--- a/app.html
+++ b/app.html
@@ -18,12 +18,21 @@ p{font-size: 13px;}
 	margin-bottom: 10px;
 }
 
-a{
-	text-decoration: none;
+p{
 	color: #607D8B;
 }
 
+a{margin-top: 15px;
+    font-size: 13px;
+    color: #3F51B5;}
+
+span{color: #03a9f4;}
+
+small{color: #ff5722;}
+
 #produto > div {max-width: 100%;}
+
+#produto > div img {max-width: 180px;}
 
 #produto > div:hover {box-shadow: none; background-color:white;}
 
@@ -32,7 +41,6 @@ a{
 	margin: 12px;
     max-width: 180px;
     display: grid;
-	cursor: pointer;
 	background-color: white;
 	border-radius: 10px;
 }
