ajuste container animacao responsivo

--- a/app.html
+++ b/app.html
@@ -81,7 +81,7 @@ i{
 	
 	<h2>Produtos que podem te interessar: </h2>
 	
-	<div style="display: inline-flex;align-items: center;">
+	<div style="display: flex;align-items: center;">
 		<div id="esquerda">
 			<i class="material-icons" onclick="mover(1)">
 				keyboard_arrow_lefth
