--- a/app.html
+++ b/app.html
@@ -40,6 +40,7 @@ small{color: #ff5722;}
 	padding: 20px;
 	margin: 12px;
     max-width: 180px;
+	max-height: 320px;
     display: grid;
 	background-color: white;
 	border-radius: 10px;
